--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nrwl/react": "15.5.2",
     "@nrwl/storybook": "15.5.2",
     "@nrwl/web": "15.5.2",
+    "@nrwl/webpack": "^15.5.2",
     "@nrwl/workspace": "15.5.2",
     "@storybook/addon-essentials": "6.5.15",
     "@storybook/builder-webpack5": "6.5.15",
